camunda/camunda-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camunda
  name: camunda
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: camunda
